# piper-draw

./: .dockerignore  .gitignore  AI_CODE_POLICY.md  AI_CODE_STATEMENT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_LICENSES.md  TODOS.md  fly.dev.toml  fly.toml  pyproject.toml  server.py
.claude/skills/open-gui/: SKILL.md  start.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: architecture-md-check.yml  fly-deploy-dev.yml  fly-deploy.yml  gui-pr-tests.yml  python-pr-checks.yml  python-tests.yml  secret-scan.yml  weekly-metrics.yml
gui/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
gui/public/templates/: steane_encoding.dae
gui/scripts/: dev.mjs  slop-diff.mjs
gui/src/: App.tsx
gui/src/components/: AxisLabels.tsx  BlockInstances.logic.test.ts  BlockInstances.logic.ts  BlockInstances.tsx  BuildModeHints.tsx  CorrSurfaceOverlay.tsx  DragGhost.tsx  DragShadow.test.tsx  DragShadow.tsx  EditModeHints.tsx  FlowSurfaceOverlay.tsx  FlowsPanel.tsx  FoldOutCubeOverlay.tsx  FpsCounter.tsx  FreeBuildPipeVariantsPanel.tsx  GhostBlock.test.tsx  GhostBlock.tsx  GridPlane.tsx  GroundShadowAbsolute.test.tsx  GroundShadowAbsolute.tsx  GroupOutlines.tsx  HelpPanel.tsx  HintBar.tsx  InvalidBlockHighlights.tsx  KeybindEditor.tsx  LocatePulseHighlight.tsx  NavControlsModifier.tsx  OpenPipeGhosts.test.tsx  OpenPipeGhosts.tsx  PasteGhost.test.tsx  PasteGhost.tsx  PortLabels3D.test.tsx  PortsTable.tsx  (+11 more)
piper_draw/: __init__.py  ir.py
piper_draw/core/: __init__.py  block.py  pipe_diagram.py  rules.py  rulesets.py
piper_draw/gui/: package-lock.json  package.json
scripts/: generate_logo.py  generate_templates.py
tests/: randomly_utils.py  test_get_seeds.py  test_server.py
tests/core/: test_block.py  test_dae_tqec_compat.py  test_pipe_diagram.py
(+123 files in other folders)
