[project]
name = "piper-draw"
version = "0.1.0"
description = "Interactively draw pipe diagrams for lattice surgery."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.2",
    "stim>=1.15.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "tqec @ git+https://github.com/tqec/tqec.git",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest-randomly>=4.0.1",
    "ipython>=9.12.0",
    "matplotlib>=3.10.8",
    "tqec @ git+https://github.com/tqec/tqec.git",
]

[tool.setuptools.packages.find]
include = ["piper_draw*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
